--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-distlib==0.3.6
-filelock==3.8.0
-platformdirs==2.5.3
-virtualenv==20.16.6
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.3
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+Werkzeug==2.2.3
