--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-click==8.1.3
-colorama==0.4.6
 Flask==2.2.3
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-Werkzeug==2.2.3
+Flask-SQLAlchemy==3.0.3
+PyMySQL==1.0.3
